feat(department):create Department table

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <!-- main div element -->
@@ -29,9 +33,7 @@
           </router-link>
         </div>
       </div>
-      <div class="jumbotron containe-fluid">
-        <router-view></router-view>
-      </div>
+      <router-view></router-view>
     </div>
 
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
