feat(test):add testing file for basics

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
               >
             </li>
             <li class="nav-item">
+              <router-link class="nav-link" to="/test">Test</router-link>
+            </li>
+            <li class="nav-item">
               <router-link class="nav-link" to="/item">Item</router-link>
             </li>
           </ul>
@@ -80,6 +83,7 @@
     <script src="Home.js"></script>
     <script src="Customer.js"></script>
     <script src="Item.js"></script>
+    <script src="test.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
